--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
+ 
+   {{ render(controller('App\\Controller\\LayoutController::headerAction'))  }}   
+    
+  
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -17,4 +21,7 @@
         <li>Your template at <code><a href="{{ 'templates/homepage/index.html.twig'|file_link(0) }}">templates/homepage/index.html.twig</a></code></li>
     </ul>
 </div>
+        
+{{ render(controller('App\\Controller\\LayoutController::footerAction'))  }}         
+        
 {% endblock %}
