Création de la home

--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Super en pied de page de ouf
-    </body>
+    <div class='footer'>
+        <body>
+            Super en pied de page de ouf
+        </body>    
+    </div>
 </html>
