--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,13 +1,3 @@
-h1{
-    display:none;
-}
-.footer
-{
-    text-align:center;
-    position: fixed;
-    bottom:0;
-    width:100%;
-    display:inline-block;
-    vertical-align:top;
-    font-size:13px;
+body {
+    background-color: lightgray;
 }
