--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -6,15 +6,21 @@
  
    {{ render(controller('App\\Controller\\LayoutController::headerAction'))  }}   
     
-   <div class="container">
-        <h1>
-            <span class="xspTextLabel">Home</span></h1>
-        <br>
-        <span class="glyphicon glyphicon-heart"></span>
-        <span class="xspTextComputedField">Bienvenue sur l'ERP de Lab4Tech. Cet espace vous permet de saisir les candidat 
-            inscrit au stage Lab4Tech et de les rattacher à un conseiller ORP.</span>
-        <span class="glyphicon glyphicon-heart"></span>
-   </div>
+  
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
+
+<div class="example-wrapper">
+    <h1>Hello {{ controller_name }}! ✅</h1>
+
+    This friendly message is coming from:
+    <ul>
+        <li>Your controller at <code><a href="{{ 'src/Controller/HomepageController.php'|file_link(0) }}">src/Controller/HomepageController.php</a></code></li>
+        <li>Your template at <code><a href="{{ 'templates/homepage/index.html.twig'|file_link(0) }}">templates/homepage/index.html.twig</a></code></li>
+    </ul>
+</div>
         
 {{ render(controller('App\\Controller\\LayoutController::footerAction'))  }}         
         
