--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -16,7 +16,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" id="view:_id1:_id2:_id3:_id7:titleLink" href="/app/absences.nsf/Home_Home.xsp">ERP 0.0.0.1</a>
+                    <a class="navbar-brand" id="view:_id1:_id2:_id3:_id7:titleLink" href="/">ERP 0.0.0.1</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -28,23 +28,37 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id50:itemLink" href="/app/absences.nsf/Absences_Edit.xsp?action=newDocument">
+                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id50:itemLink" href="/candidat/new">
                                         <span class="glyphicon glyphicon-plus"></span>
                                         <span class="xspTextComputedField">Ajouter un candidat</span>
                                     </a>
                                 </li>
-                                <li><a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id57:itemLink" href="/app/absences.nsf/Absences_List.xsp">
+                                <li><a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id57:itemLink" href="/candidat">
                                         <span class="glyphicon glyphicon-list"></span>
                                         <span class="xspTextComputedField">Visualiser les candidat</span>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li>
-                            <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id93:itemLink" href="/app/absences.nsf/TimeEntry_List.xsp">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-list"></span>
-                                        <span class="xspTextComputedField">Conseiller</span>
+                                <span class="xspTextComputedField">Conseiller</span>
+                                <b class="caret"></b>
                             </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id50:itemLink" href="/orp/new">
+                                        <span class="glyphicon glyphicon-plus"></span>
+                                        <span class="xspTextComputedField">Ajouter un conseiller ORP</span>
+                                    </a>
+                                </li>
+                                <li><a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id57:itemLink" href="/orp">
+                                        <span class="glyphicon glyphicon-list"></span>
+                                        <span class="xspTextComputedField">Visualiser les conseiller ORP</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id100:itemLink" href="/app/absences.nsf/Enquetes_List.xsp">
