--- a/templates/candidat/show.html.twig
+++ b/templates/candidat/show.html.twig
@@ -16,16 +16,20 @@
                 <td>{{ candidat.gender }}</td>
             </tr>
             <tr>
-                <th>Prename</th>
-                <td>{{ candidat.prename }}</td>
+                <th>FirstName</th>
+                <td>{{ candidat.firstName }}</td>
+            </tr>
+            <tr>
+                <th>LastName</th>
+                <td>{{ candidat.lastName }}</td>
             </tr>
             <tr>
                 <th>Street</th>
                 <td>{{ candidat.street }}</td>
             </tr>
             <tr>
-                <th>Adresse</th>
-                <td>{{ candidat.adresse }}</td>
+                <th>Address</th>
+                <td>{{ candidat.address }}</td>
             </tr>
             <tr>
                 <th>PostalCode</th>
