--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <div class='footer'>
-        <body>
-            Super en pied de page de ouf
-        </body>    
+<footer class="footer">
+    <div class="container">
+    Super en pied de page de ouf
     </div>
-</html>
+</footer>
+
