--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,13 +1,28 @@
-h1{
-    display:none;
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
-.footer
-{
-    text-align:center;
-    position: fixed;
-    bottom:0;
-    width:100%;
-    display:inline-block;
-    vertical-align:top;
-    font-size:13px;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+
+
+body > .container {
+  padding: 60px 15px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
 }
