--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -1,127 +1,104 @@
-<!DOCTYPE html>
-<html>
-     <head>         
-         <link href="{{ asset('build/app.css') }}" rel="stylesheet" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </head>
-    <body> 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" id="view:_id1:_id2:_id3:_id7:titleLink" href="/">ERP 0.0.0.1</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-list"></span>
-                                <span class="xspTextComputedField">Candidat</span>
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id50:itemLink" href="/candidat/new">
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        <span class="xspTextComputedField">Ajouter un candidat</span>
-                                    </a>
-                                </li>
-                                <li><a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id57:itemLink" href="/candidat">
-                                        <span class="glyphicon glyphicon-list"></span>
-                                        <span class="xspTextComputedField">Visualiser les candidat</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-list"></span>
-                                <span class="xspTextComputedField">Conseiller</span>
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id50:itemLink" href="/orp/new">
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        <span class="xspTextComputedField">Ajouter un conseiller ORP</span>
-                                    </a>
-                                </li>
-                                <li><a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id57:itemLink" href="/orp">
-                                        <span class="glyphicon glyphicon-list"></span>
-                                        <span class="xspTextComputedField">Visualiser les conseiller ORP</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id100:itemLink" href="/app/absences.nsf/Enquetes_List.xsp">
-                                <span class="glyphicon glyphicon-list"></span>
-                                        <span class="xspTextComputedField">Enquêtes</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id107:itemLink" href="/app/absences.nsf/MMT.xsp">
-                                <span class="glyphicon glyphicon-flag"> </span>
-                                        <span class="xspTextComputedField">MMT</span>
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-globe"></span>
-                                        <span class="xspTextComputedField">Langues</span>
-                                        <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id121:_id129:0:_id130:link1" href="#">
-                                                    <img src="#"> Français</a>
-                                            </li>
-                                            <li>
-                                                <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id121:_id129:1:_id130:link1" href="#">
-                                                    <img src="#"> Anglais
-                                                </a>
-                                            </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span>
-                                <span class="xspTextComputedField">Intranet</span>
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id134:_id142:itemLink" href="http://192.168.0.111/App/Extranet2.nsf" target="_blank">
-                                       <span class="glyphicon glyphicon-new-window"></span>
-                                       <span class="xspTextComputedField">Extranet</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id134:_id149:itemLink" href="http://192.168.0.111/App/Projet.nsf" target="_blank">
-                                        <span class="glyphicon glyphicon-new-window"></span>
-                                        <span class="xspTextComputedField">Projet</span>
-                                    </a>
-                                </li>
-                                    <li class="divider" role="separator"></li>
-                                    <li>
-                                        <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id134:_id158:logoutLink" href="#">
-                                            <span class="glyphicon glyphicon-log-out"></span>Déconnecter
-                                        </a>
-                                    </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <script src="{{ asset('build/app.js') }}"></script>
-            <br/><br/>
-    </body>
-</html>
+<header>
+
+<div class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="/">ERP</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Candidat
+                </a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item">
+                        <a href="{{ path('candidat_new') }}">
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="xspTextComputedField">Ajouter un candidat</span>
+                        </a>
+                    </li>
+                    <li class="dropdown-item">
+                    <a href="{{ path('candidat_index') }}">
+                            <span class="glyphicon glyphicon-list"></span>
+                            <span class="xspTextComputedField">Visualiser les candidat</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Conseiller
+                </a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item">
+                        <a href="{{ path('orp_new') }}">
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="xspTextComputedField">Ajouter un conseiller ORP</span>
+                        </a>
+                    </li>
+                    <li class="dropdown-item">
+                    <a href="{{ path('orp_index') }}">
+                            <span class="glyphicon glyphicon-list"></span>
+                            <span class="xspTextComputedField">Visualiser les conseiller ORP</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/app/absences.nsf/Enquetes_List.xsp">
+                    <span class="glyphicon glyphicon-list"></span>
+                    <span class="xspTextComputedField">Enquêtes</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/app/absences.nsf/MMT.xsp">
+                    <span class="glyphicon glyphicon-flag"> </span>
+                    <span class="xspTextComputedField">MMT</span>
+                </a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Langue
+                </a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item">
+                        <a href="#">
+                            <img src="#"> Français</a>
+                    </li>
+                    <li class="dropdown-item">
+                        <a href="#">
+                            <img src="#"> Anglais
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                User name
+                </a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item">
+                        <a href="http://192.168.0.111/App/Extranet2.nsf" target="_blank">
+                            <span class="glyphicon glyphicon-new-window"></span>
+                            <span class="xspTextComputedField">Extranet</span>
+                        </a>
+                    </li>
+                    <li class="dropdown-item">
+                        <a href="http://192.168.0.111/App/Projet.nsf" target="_blank">
+                            <span class="glyphicon glyphicon-new-window"></span>
+                            <span class="xspTextComputedField">Projet</span>
+                        </a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li class="dropdown-item">
+                        <a href="#">
+                            <span class="glyphicon glyphicon-log-out"></span>Déconnecter
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</div>
+</header>
