UnemploymentFund Controller avec CRUD + THEME génariler pour le project

--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -60,13 +60,27 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>
-                            <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id100:itemLink" href="/app/absences.nsf/Enquetes_List.xsp">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-list"></span>
-                                        <span class="xspTextComputedField">Enquêtes</span>
+                                <span class="xspTextComputedField">Caisse de chômage</span>
+                                <b class="caret"></b>
                             </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id50:itemLink" href="/unemployment/fund/new">
+                                        <span class="glyphicon glyphicon-plus"></span>
+                                        <span class="xspTextComputedField">Ajouter une caisse de chômage</span>
+                                    </a>
+                                </li>
+                                <li><a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id42:_id57:itemLink" href="/caisseChomage">
+                                        <span class="glyphicon glyphicon-list"></span>
+                                        <span class="xspTextComputedField">Visualiser les Caisse de chômages</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
-                        <li>
+
                             <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id107:itemLink" href="/app/absences.nsf/MMT.xsp">
                                 <span class="glyphicon glyphicon-flag"> </span>
                                         <span class="xspTextComputedField">MMT</span>
