--- a/templates/unemployment_fund/new.html.twig
+++ b/templates/unemployment_fund/new.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Orp{% endblock %}
+{% block title %}New UnemploymentFund{% endblock %}
 
 {% block body %}
 {{ render(controller('App\\Controller\\LayoutController::headerAction'))  }} 
-    <h1>Create new Orp</h1>
 
-    {{ include('orp/_form.html.twig') }}
+    <h1>Create new UnemploymentFund</h1>
 
-    <a href="{{ path('orp_index') }}">back to list</a>
+    {{ include('unemployment_fund/_form.html.twig') }}
+
+    <a href="{{ path('unemployment_fund_index') }}">back to list</a>
     {{ render(controller('App\\Controller\\LayoutController::footerAction'))  }} 
 {% endblock %}
