--- a/templates/candidat/new.html.twig
+++ b/templates/candidat/new.html.twig
@@ -3,8 +3,10 @@
 {% block title %}New Candidat{% endblock %}
 
 {% block body %}
+{{ render(controller('App\\Controller\\LayoutController::headerAction'))  }}  
     <h1>Create new Candidat</h1>
 
+  
     {{ include('candidat/_form.html.twig') }}
 
     <a href="{{ path('candidat_index') }}">back to list</a>
