--- a/templates/orp/edit.html.twig
+++ b/templates/orp/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Orp{% endblock %}
 
 {% block body %}
+{{ render(controller('App\\Controller\\LayoutController::headerAction'))  }} 
     <h1>Edit Orp</h1>
 
     {{ include('orp/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('orp_index') }}">back to list</a>
 
     {{ include('orp/_delete_form.html.twig') }}
+    {{ render(controller('App\\Controller\\LayoutController::footerAction'))  }} 
 {% endblock %}
