--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,9 +6,11 @@
         {% block stylesheets %} {% endblock %}
     </head>
     <body>
+        <!--Inclusion du header dans tout les template html.twig qui utilise ce template -->
         {{ render(controller('App\\Controller\\LayoutController::headerAction'))  }} 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <!--Inclusion du footer dans tout les template html.twig qui utilise ce template -->
         {{ render(controller('App\\Controller\\LayoutController::footerAction'))  }}  
     </body>
 </html>
