--- a/templates/unemployment_fund/index.html.twig
+++ b/templates/unemployment_fund/index.html.twig
@@ -3,8 +3,7 @@
 {% block title %}UnemploymentFund index{% endblock %}
 
 {% block body %}
-    {{ render(controller('App\\Controller\\LayoutController::headerAction'))  }} 
-    <h1>UnemploymentFund index</h1>
+    <h1>Caisse de chômage</h1>
 
     <table class="table">
         <thead>
@@ -45,5 +44,4 @@
     </table>
 
     <a href="{{ path('unemployment_fund_new') }}">Create new</a>
-     {{ render(controller('App\\Controller\\LayoutController::footerAction'))  }} 
 {% endblock %}
