--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -3,39 +3,39 @@
  <body>
     <div class='footer'>
        
-            <!-- Footer -->
+            {# Footer #}
 <footer id class="page-footer font-small blue pt-4">
 
-    <!-- Footer Links -->
+    {# Footer Links #}
     <div class="container-fluid text-center text-md-left">
 
-      <!-- Grid row -->
+      {# Grid row #}
       <div class="row">
 
-        <!-- Grid column -->
+        {# Grid column #}
         <div class="col-md-6 mt-md-0 mt-3">
 
-          <!-- Content -->
+          {# Content #}
           <h5 class="text-uppercase">Lab4Tech ERP</h5>
-          <p>Here you can use rows and columns here to organize your footer content.</p>
+          <p>Bienvenue sur l'ERP de Lab4Tech. Cet espace vous permet de saisir les candidat inscrit au stage Lab4Tech et de les rattacher à un conseiller ORP.</p>
 
         </div>
-        <!-- Grid column -->
+        {# Grid column #}
 
         <hr class="clearfix w-100 d-md-none pb-3">
 
-        <!-- Grid column -->
+        {# Grid column #}
         <div class="col-md-3 mb-md-0 mb-3">
 
-            <!-- Links -->
+            {# Links #}
             <h5 class="text-uppercase">Links</h5>
 
             <ul class="list-unstyled">
               <li>
-                <a href="#!">Link 1</a>
+                <a href="https://www.lab4tech.ch/app/extranet2.nsf/Home_Home.xsp">Connexion Extranet</a>
               </li>
               <li>
-                <a href="#!">Link 2</a>
+                <a href="https://lab4tech.ch/app/website.nsf/www.xsp?p=INSCRIPTION">Inscription au bilan complémentaire </a>
               </li>
               <li>
                 <a href="#!">Link 3</a>
@@ -46,12 +46,12 @@
             </ul>
 
           </div>
-          <!-- Grid column -->
+          {# Grid column #}
 
-          <!-- Grid column -->
+          {# Grid column #}
           <div class="col-md-3 mb-md-0 mb-3">
 
-            <!-- Links -->
+            {# Links #}
             <h5 class="text-uppercase">Links</h5>
 
             <ul class="list-unstyled">
@@ -70,22 +70,22 @@
             </ul>
 
           </div>
-          <!-- Grid column -->
+          {# Grid column #}
 
       </div>
-      <!-- Grid row -->
+      {# Grid row #}
 
     </div>
-    <!-- Footer Links -->
+    {# Footer Links #}
 
-    <!-- Copyright -->
+    {# Copyright #}
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
       <a href="https://www.lab4tech.ch/"> Lab4Tech.ch</a>
     </div>
-    <!-- Copyright -->
+    {# Copyright #}
 
   </footer>
-  <!-- Footer -->
+  {# Footer #}
           
     </div>
   </body>    
