--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -7,6 +7,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body> 
+    <div class="header">
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
@@ -137,6 +138,7 @@
             </div>
         </nav>
     </header>
+    </div>
         <script src="{{ asset('build/app.js') }}"></script>
             <br/><br/>
     </body>
