Ajout d'un lien dans le headear pour la visualisation de MMT

--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -83,7 +83,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id107:itemLink" href="/app/absences.nsf/MMT.xsp">
+                            <a class="xspLink" id="view:_id1:_id2:_id3:_id7:_id19:_id107:itemLink" href="http://192.168.0.111/App/Absences.nsf/MMT.xsp">
                                 <span class="glyphicon glyphicon-flag"> </span>
                                         <span class="xspTextComputedField">MMT</span>
                             </a>
