--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
+
         <title>{% block title %}ERP Lab4Tech{% endblock %}</title>
         {% block stylesheets %} {% endblock %}
+        <link href="{{ asset('build/app.css') }}" rel="stylesheet" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
+
         <!--Inclusion du header dans tout les template html.twig qui utilise ce template -->
         {{ render(controller('App\\Controller\\LayoutController::headerAction'))  }} 
         {% block body %}{% endblock %}
