--- a/templates/candidat/_form.html.twig
+++ b/templates/candidat/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form) }}
+
+    <div class="container-fluid form-group">
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
+    </div>
 {{ form_end(form) }}
