--- a/templates/candidat/new.html.twig
+++ b/templates/candidat/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Candidat{% endblock %}
 
 {% block body %}
-    <h1>Inscription d'un nouveau candidat</h1>
+    <h1>Create new Candidat</h1>
 
     {{ include('candidat/_form.html.twig') }}
 
