--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -2,69 +2,60 @@
 {% extends 'base.html.twig' %}
 
 {#Titre de la page (délimiter par '%block title%'  et %endblock%) #}
-{% block title %}{{ controller_name }}{% endblock %}
-
+{% block title %}{{ controller_name }}
+{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('build/homepage.css') }}" rel="stylesheet"/>
+    {{ parent() }}
+{% endblock %}
 {# bloc destiné à comprendre le corps de la page #}
-{% block body %}   
- <div class="container-fluid ">
-   <div class="row">
-      <div class="col-lg-3 col-md-6">
-         <div class="panel panel-primary">
-            <div class="panel-heading">
-               <div class="row">
-                  <div class="col-xs-3"><i class="fa fa-5x fa-tasks"></i></div>
-                  <div class="col-xs-9 text-right">
-                     <div class="huge">Suivie des candidats</div>
-                  </div>
-               </div>
+{% block body %}
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h1>Suivi des candidats</h1>
+                <table class="table table-hover">
+                    <tbody>
+                        <tr class="clickable">
+                            <td>
+                                <span class="fa fa-star"></span>
+                                Nombre de candidat inscrit
+                            </td>
+                            <td align="right">10</td>
+                        </tr>
+                        <tr class="clickable">
+                            <td>
+                                <span class="fa fa-wrench"></span>
+                                Nombre de candidat en cours de bilan
+                            </td>
+                            <td align="right">4</td>
+                        </tr>
+                        <tr class="clickable">
+                            <td>
+                                <span class="fa fa-tasks"></span>
+                                Nombre de place vacante
+                            </td>
+                            <td align="right">100</td>
+                        </tr>
+                        <tr class="clickable">
+                            <td>
+                                <span class="fa fa-briefcase"></span>
+                                Candidat sans conseiller ORP
+                            </td>
+                            <td align="right">???</td>
+                        </tr>
+                        <tr id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id639:_id640:activityRepeat:5:activityLine" class="clickable">
+                            <td>
+                                <span class="fa fa-pencil"></span>
+                                Nombre de certification déja passé
+                            </td>
+                            <td align="right">431</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="{{ path('candidat_new') }}" class="btn btn-success">Ajouter un candidat</a>
+                <a href="{{ path('candidat_index') }}" class="btn btn-primary">Liste des candidats</a>
             </div>
-            <table role="presentation" class="table table-hover">
-               <tbody>
-                  <tr id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id639:_id640:activityRepeat:0:activityLine" class="clickable">
-                     <td><span class="glyphicon glyphicon-star">
-                        </span>
-                        Nombre de candidat inscrit
-                     </td>
-                     <td align="right">10</td>
-                  </tr>
-                  <tr id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id639:_id640:activityRepeat:1:activityLine" class="clickable">
-                     <td><span class="glyphicon glyphicon-wrench">
-                        </span>
-                        Nombre de candidat en cours de bilan
-                     </td>
-                     <td align="right">4</td>
-                  </tr>
-                  <tr id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id639:_id640:activityRepeat:2:activityLine" class="clickable">
-                     <td><span class="glyphicon glyphicon-tasks">
-                        </span>
-                        Nombre de place vacante
-                     </td>
-                     <td align="right">100</td>
-                  </tr>
-                  <tr id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id639:_id640:activityRepeat:3:activityLine" class="clickable">
-                     <td><span class="glyphicon glyphicon-briefcase">
-                        </span>
-                        Candidat sans conseiller ORP
-                     </td>
-                     <td align="right">???</td>
-                  </tr>
-                  <tr id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id639:_id640:activityRepeat:5:activityLine" class="clickable">
-                     <td><span class="glyphicon glyphicon-pencil">
-                        </span>
-                        Nombre de certification déja passé 
-                     </td>
-                     <td align="right">431</td>
-                  </tr>
-               </tbody>
-            </table>
-            <a id="view:_id1:_id2:_id302:sectionRepeat:1:moduleRepeat:0:_id622:_id624:_id625:_id626:_id657" href="/app/extranet2.nsf/CompetenceModule.xsp?action=editDocument&amp;documentId=42477DEB20BCDCAFC1258042007FDF2E">
-               <div class="panel-footer">
-                  <span class="pull-left">Asigner un ORP à un candidat</span><span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                  <div class="clearfix"></div>
-               </div>
-            </a>
-         </div>
-      </div>
-   </div>
-</div> 
+        </div>
+    </div>
 {% endblock %}
