--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
- <body>
-    <div class='footer'>
+
        
             {# Footer #}
-<footer id class="page-footer font-small blue pt-4">
+<footer id class="footer page-footer font-small blue pt-4">
 
     {# Footer Links #}
     <div class="container-fluid text-center text-md-left">
@@ -86,7 +83,4 @@
 
   </footer>
   {# Footer #}
-          
-    </div>
-  </body>    
-</html>
+ 
