--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -21,21 +21,21 @@
                                 <span class="fa fa-star"></span>
                                 Nombre de candidat inscrit
                             </td>
-                            <td align="right">10</td>
+                            <td align="right">{{nb_candidates}}</td>
                         </tr>
                         <tr class="clickable">
                             <td>
                                 <span class="fa fa-wrench"></span>
                                 Nombre de candidat en cours de bilan
                             </td>
-                            <td align="right">4</td>
+                            <td align="right">{{nb_candidates_bilan}}</td>
                         </tr>
                         <tr class="clickable">
                             <td>
                                 <span class="fa fa-tasks"></span>
                                 Nombre de place vacante
                             </td>
-                            <td align="right">100</td>
+                            <td align="right">???</td>
                         </tr>
                         <tr class="clickable">
                             <td>
@@ -49,7 +49,7 @@
                                 <span class="fa fa-pencil"></span>
                                 Nombre de certification déja passé
                             </td>
-                            <td align="right">431</td>
+                            <td align="right">???</td>
                         </tr>
                     </tbody>
                 </table>
