--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -13,13 +13,13 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-item">
-                        <a href="{{ path('candidat_new') }}">
+                        <a href="{{ path('candidates_new') }}">
                             <span class="glyphicon glyphicon-plus"></span>
                             <span class="xspTextComputedField">Ajouter un candidat</span>
                         </a>
                     </li>
                     <li class="dropdown-item">
-                    <a href="{{ path('candidat_index') }}">
+                    <a href="{{ path('candidates_index') }}">
                             <span class="glyphicon glyphicon-list"></span>
                             <span class="xspTextComputedField">Visualiser les candidat</span>
                         </a>
@@ -32,13 +32,13 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-item">
-                        <a href="{{ path('orp_new') }}">
+                        <a href="{{ path('orps_new') }}">
                             <span class="glyphicon glyphicon-plus"></span>
                             <span class="xspTextComputedField">Ajouter un conseiller ORP</span>
                         </a>
                     </li>
                     <li class="dropdown-item">
-                    <a href="{{ path('orp_index') }}">
+                    <a href="{{ path('orps_index') }}">
                             <span class="glyphicon glyphicon-list"></span>
                             <span class="xspTextComputedField">Visualiser les conseiller ORP</span>
                         </a>
